# match-scraper

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLI_README.md  COVERAGE_GUIDE.md  DATABASE_FIX_GUIDE.md  Dockerfile  Dockerfile.fast  Dockerfile.gke  Dockerfile.lambda  Dockerfile.lambda.simple  E2E_TESTING_README.md  GKE_DEPLOYMENT.md  GKE_GITHUB_ACTIONS_SETUP.md  GKE_TESTING_GUIDE.md  IFRAME_INVESTIGATION_REPORT.md  LAMBDA_DEPLOYMENT.md  LAMBDA_IMPLEMENTATION_SUMMARY.md  LAMBDA_QUICKSTART.md  MIGRATION_TO_GKE.md  README.md  TESTING_README.md  cronjob-backup-20251008-092102.yaml  docker-compose.localstack.yml  env.dev  env.dev.template  extract_teams.py  fix_cronjob_sidecar.sh  iframe_filter_implementation.py  metrics.txt  pyproject.toml  review_cronjob_run.sh  run_weekly_scrapes.sh  test_api_health.py  test_api_payload.py  test_async_submission.py  test_bootstrap_select.py  (+8 more)
.claude/: README.md
.claude/agents/: test-guardian.md
.github/: pages-setup.md
.github/workflows/: deploy-grafana-dashboards.yml  gke-deploy.yml  lambda-deploy.yml  test-and-publish.yml
code-quality-gates/7/: coverage.json  index.html  junit.xml  report.json
code-quality-gates/8/: coverage.json  index.html  junit.xml  report.json
docs/: README.md  observability-review.md
docs/architecture/: async-message-queue-architecture.md  fix-summary.md  rabbitmq-fanout-dev-prod.md
docs/deployment/: ENVIRONMENT_MIGRATION.md  k3s-deployment.md  k3s-pickup-guide.md  migration-to-gke.md  supabase-credentials.md
docs/development/: fast-commits.md  test-reports-access.md  testing.md
docs/guides/: audit-system.md  rabbitmq-password-change.md
docs/observability/: fix-loki-auth.md  grafana-cloud-setup.md  logging-architecture.md  observability-success.md
grafana/dashboards/: CHANGELOG.md  DEPLOYMENT.md  README.md  grizzly.yaml  scraper-errors.json  scraper-overview.json  scraper-test.json
k3s/match-scraper/: academy-cronjob.yaml  cleanup-cronjob.yaml  configmap.yaml  cronjob.yaml  homegrown-cronjob.yaml  secret.yaml
k3s/rabbitmq/: configmap.yaml  namespace.yaml  secret.yaml  service-nodeport.yaml  service.yaml  statefulset.yaml
k3s/workers/: README.md  dev-configmap.yaml  dev-deployment.yaml  local-configmap.yaml  local-deployment.yaml  prod-configmap.yaml  prod-deployment.yaml  prod-secret.yaml.template
k8s/: configmap.yaml  cronjob.yaml  cronjob.yaml.bak  grafana-dashboard-overview.yaml  namespace.yaml  promtail-config.yaml  secret.yaml  secret.yaml.bak
scripts/: README-trigger.md  README.md  __init__.py  build-and-push-gke.sh  check_coverage.sh  check_coverage.sh.bak  cleanup-manual-jobs.sh  deploy-gke-complete.sh  deploy-gke-env.sh  deploy-grafana-dashboards.sh  deploy-k3s.sh  deploy-to-gke.sh  deploy_lambda_localstack.sh  dump_metrics.py  dump_metrics_grafana_api.py  fix-database.sh  fix-supabase-data.py  invoke_lambda_localstack.sh  mls  run_e2e_test.py  setup-github-actions-gcp.sh  setup-mac-wake.sh  setup_eventbridge_localstack.sh  smoke_test_stderr_formatter.py  test-gke.sh  test-k3s.sh  test-review.py  test_metrics_e2e.py  test_parsing_only.py  test_playwright.py  test_scraping_dry_run.py  test_scraping_manual.py  trigger-gke-job.sh  trigger-scrape.sh  update-gke-secret.sh  verify_lambda_setup.sh  view-audit.sh
src/: __init__.py  lambda_handler.py
src/api/: __init__.py  (+1 more)
terraform/: .gitkeep  DEPLOYMENT_STRATEGY.md  README.md  grafana-dashboards.tf  grafana.tfvars.example
(+93 files in other folders)
